# TrackieLLM

./: .clang-format  .gitignore  Brewfile  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml  vcpkg.json
.docs/: Google-labs_Jules.md  Inova-Trackie.md  architecture.md  trackie_overview.md
.docs/API_reference/: text_recognition_api.md  vision_api.md
.docs/Gpu/: inference.md
.docs/Overview/: Inova-Trackie.md  architecture.md  trackie_overview.md
.github/: FUNDING.yml
ci/: azure-pipelines.yml  build.sh  lint.sh  security_audit.sh  test.sh
examples/c/: CMakeLists.txt  audio_capture_test.c  audio_say_test.c
src/: CMakeLists.txt  main.rs
src/ai_models/: Cargo.toml  tk_model_loader.c  tk_model_loader.h  tk_model_runner.c  tk_model_runner.h
src/ai_models/src/: gguf_runner.rs  lib.rs  onnx_runner.rs
src/async_tasks/: Cargo.toml
src/async_tasks/src/: async_executor.rs  lib.rs  task_manager.rs
src/audio/: Cargo.toml  tk_asr_whisper.c  tk_asr_whisper.h  tk_audio_pipeline.c  tk_audio_pipeline.h  tk_sound_classifier.c  tk_sound_classifier.h  tk_tts_piper.c  tk_tts_piper.h  tk_wake_word_porcupine.c  tk_wake_word_porcupine.h
src/audio/src/: asr_processing.rs  ffi.rs  lib.rs  tts_synthesis.rs
src/cortex/: Cargo.toml  ffi.rs  mod.rs  tk_contextual_reasoner.c  tk_contextual_reasoner.h  tk_cortex_main.c  tk_cortex_main.h  tk_decision_engine.c  tk_decision_engine.h
src/cortex/rust/: memory_manager.rs  reasoning.rs
src/cortex/src/: ffi.rs  lib.rs  memory_manager.rs  reasoning.rs
src/deployment/: Cargo.toml
src/deployment/src/: lib.rs  package_manager.rs  version_checker.rs
src/event_bus/: Cargo.toml  event_bus_ffi.h  mod.rs
src/event_bus/src/: lib.rs
src/experiments/: Cargo.toml
src/experiments/src/: lib.rs  metrics_comparator.rs  model_analysis.rs
src/ffi/: Cargo.toml
src/ffi/c_api/: tk_ffi_api.c  tk_ffi_api.h  tk_ffi_cpp_api.cpp  tk_ffi_cpp_api.hpp
src/ffi/src/: ffi_bridge.rs  lib.rs  utils.rs
src/gpu/: tk_gpu_helper.h
src/gpu/cuda/: tk_cuda_dispatch.cu  tk_cuda_dispatch.h  tk_cuda_kernels.cu  tk_cuda_kernels.h  tk_cuda_math_helpers.cu  tk_cuda_math_helpers.h
src/gpu/extensions/cuda/: tk_cuda_image_ops.cu  tk_cuda_image_ops.h  tk_cuda_tensor_ops.cu  tk_cuda_tensor_ops.h
src/gpu/extensions/metal/: tk_metal_extension_kernels.metal  tk_metal_image_ops.h  tk_metal_image_ops.mm  tk_metal_tensor_ops.h  tk_metal_tensor_ops.mm
src/gpu/extensions/rocm/: tk_rocm_image_ops.cpp  tk_rocm_image_ops.hpp  tk_rocm_tensor_ops.cpp  tk_rocm_tensor_ops.hpp
src/gpu/gles/: tk_gles_dispatch.cpp  tk_gles_dispatch.h  tk_gles_helpers.cpp  tk_gles_helpers.h  tk_gles_kernels.cpp  tk_gles_kernels.h
src/gpu/kernels/cl/: depth_to_point_cloud.cl  preprocess.cl
src/gpu/metal/: tk_metal_dispatch.h  tk_metal_dispatch.mm  tk_metal_helpers.h  tk_metal_kernels.metal
src/gpu/nnapi/: tk_nnapi_dispatch.cpp  tk_nnapi_dispatch.h
src/gpu/opencl/: tk_opencl_dispatch.cpp  tk_opencl_dispatch.h  tk_opencl_helpers.cpp  tk_opencl_helpers.h  tk_opencl_kernels.cpp  tk_opencl_kernels.h
src/gpu/rocm/: tk_rocm_dispatch.cpp  tk_rocm_dispatch.hpp  tk_rocm_kernels.cpp  tk_rocm_kernels.hpp  tk_rocm_math_helpers.hpp
src/gpu/shaders/glsl/: depth_to_point_cloud.comp  preprocess.comp
src/gpu/shaders/spirv/: depth_to_point_cloud.comp  preprocess.comp
src/gpu/silicon/: tk_metal_dispatch.h  tk_metal_dispatch.mm  tk_metal_helpers.h  tk_metal_helpers.mm  tk_metal_kernels.metal
src/gpu/vulkan/: tk_vulkan_dispatch.cpp  tk_vulkan_dispatch.h  tk_vulkan_helpers.cpp  tk_vulkan_helpers.h  tk_vulkan_kernels.cpp  tk_vulkan_kernels.h
src/include/: trackie_version.h  trackiellm.h
src/integration/: Cargo.toml
src/integration/src/: bridge.rs  lib.rs  plugin_manager.rs
src/interaction/: Cargo.toml  tk_feedback_manager.c  tk_feedback_manager.h  tk_voice_commands.c  tk_voice_commands.h
src/interaction/src/: command_parser.rs  feedback_logic.rs  lib.rs
src/internal_tools/: CMakeLists.txt  Cargo.toml  tk_config_parser.c  tk_config_parser.h  tk_file_manager.c  tk_file_manager.h
src/internal_tools/src/: config_loader.rs  fs_utils.rs  lib.rs
src/logging_ext/: Cargo.toml
src/logging_ext/src/: audit_helpers.rs  event_formatter.rs  lib.rs
src/memory/: Cargo.toml
src/monitoring/: Cargo.toml
src/monitoring/src/: lib.rs  metrics_collector.rs  telemetry.rs
src/navigation/: Cargo.toml  tk_free_space_detector.c  tk_free_space_detector.h  tk_obstacle_avoider.c  tk_obstacle_avoider.h  tk_path_planner.c  tk_path_planner.h
src/navigation/src/: free_space.rs  lib.rs  obstacle_tracker.rs
src/networking/: Cargo.toml
src/networking/src/: connection_pool.rs  lib.rs  protocol.rs
src/profiling/: Cargo.toml
src/profiling/src/: lib.rs  metrics_collector.rs  profiler_core.rs
src/security/: Cargo.toml  cargo.toml  tk_auth_manager.c  tk_auth_manager.h  tk_encryption.c  tk_encryption.h
src/security/src/: ffi.rs  key_management.rs  lib.rs  secure_channels.rs
src/sensors/: Cargo.toml  ffi.rs  mod.rs  tk_sensors_fusion.c  tk_sensors_fusion.h  tk_vad_silero.c  tk_vad_silero.h
src/sensors/src/: ffi_bridge.rs  lib.rs  sensor_filters.rs  sensor_fusion.rs
src/utils/: Cargo.toml  build.rs  tk_error_handling.c  tk_error_handling.h  tk_logging.c  tk_logging.h
src/utils/src/: debug_helpers.rs  error_utils.rs  lib.rs
src/vision/: Cargo.toml  tk_depth_midas.c  tk_depth_midas.h  tk_object_detector.c  tk_object_detector.h  tk_text_recognition.cpp  tk_text_recognition.hpp  tk_vision_pipeline.c  tk_vision_pipeline.h
src/vision/src/: depth_processing.rs  ffi.rs  lib.rs  object_analysis.rs
src/workers/: Cargo.toml  audio_worker.rs  cortex_worker.rs  vision_worker.rs
src/workers/src/: audio_worker.rs  cortex_worker.rs  mod.rs  sensor_worker.rs  vision_worker.rs
tests/: CMakeLists.txt  tk_asr_whisper_test.c  tk_audio_pipeline_full_test.c  tk_config_parser_test.c  tk_cortex_full_test.c  tk_cortex_test.cpp  tk_gpu_softmax_test.cpp  tk_tts_piper_test.c  tk_vision_full_test.c
(+36 files in other folders)
