[package]
name = "trackiellm-ai-models"
version = "1.0.0"
edition = "2021"
authors = ["Pedro Henrique <phdev13@example.com>"]
description = "AI Models module for TrackieLLM - runners for ONNX and GGUF models"
license = "AGPL-3.0"
repository = "https://github.com/example/trackiellm"

[lib]
name = "trackiellm_ai_models"
crate-type = ["cdylib", "rlib"]

[dependencies]
# For robust error handling
thiserror = "1.0"

# For the FFI global state management
lazy_static = "1.4"

# For FFI data exchange
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For running ONNX models
ort = "2.0.0-rc.1"

# For tensor manipulation, often used with ONNX
ndarray = "0.15"

# For parsing GGUF model files
gguf = "0.4.0"


[dev-dependencies]
# For testing
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
